# OpenGLExperiment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Experiment/headers/: camera.h  experiment.hpp  globals.h  shader.hpp  texture.hpp  window.hpp
Experiment/resources/shaders/: rectangle.frag  rectangle.vert
Experiment/src/: globals.cpp  main.cpp  shader.cpp  texture.cpp  window.cpp
